networking/ingress-wildcard.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wildcard-host-ingress
spec:
  rules:
  - host: "*.web.example.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: web-service
            port:
              number: 9090
  - host: "*.video.example.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: video-service
            port:
              number: 8080
